@@ -53,7 +53,6 @@ compute_ux.o \
 coset.o \
 d_matrix.o \
 data_structure.o \
-data_structure_custom.o \
 deriv_drhoc.o \
 divide_class.o \
 divide_class_so.o \
